[workspace]
resolver = "2"
members = ["maybe-once", "maybe-once-macros", "examples/*"]

[workspace.package]
version = "0.18.0"
license = "MIT"
authors = ["ufoscout <ufoscout@gmail.com>"]
edition = "2024"
description = "A singleton. Maybe."
readme = "README.md"
homepage = "https://github.com/ufoscout/maybe-once"
repository = "https://github.com/ufoscout/maybe-once"
include = ["src/**/*", "README.md", "LICENSE"]
documentation = "https://docs.rs/maybe-once/"
rust-version = "1.85.0"
categories = ["asynchronous", "concurrency"]
keywords = ["singleton", "lazy", "once", "thread-safe", "async", "tokio"]

[workspace.dependencies]
maybe-once = { version = "0.18.0", path = "./maybe-once" }
maybe-once-macros = { version = "0.18.0", path = "./maybe-once-macros" }

log = "0.4"
parking_lot = "0.12"
proc-macro2 = "1"
quote = "1"
rand = "0.10"
syn = { version = "2" }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }