[package]
name = "maybe-once-macros"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
