[package]
name = "testcontainers_example"
version = "0.0.1"
edition.workspace = true
publish = false

[dependencies]
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
deadpool-postgres = "0.14" 
maybe-once = { path = "../../maybe-once", features = ["tokio"]}
postgres = { version = "0.19" }
testcontainers = { version = "0.23", features = ["blocking"] }
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", default-features = false, features = ["sync"] }
tokio-postgres = "0.7"